Closed Bug 1643143 Opened 4 years ago Closed 4 years ago

PlanarYCbCrImage doc comment values are inconsistent between text and diagram

Categories

(Core :: Graphics: Layers, defect)

defect

Tracking

()

RESOLVED FIXED
mozilla79
Tracking Status
firefox79 --- fixed

People

(Reporter: bryce, Assigned: bryce)

Details

Attachments

(1 file)

It appears to me that some of the values used in the text and the diagram at https://searchfox.org/mozilla-central/rev/7cadba1d8b8feaec4615f5bb98aac4b8a719793c/gfx/layers/ImageContainer.h#772-782 are inconsistent.

  • The width in the text is 640 (pixels), while the diagram appears to show a width of 660 pixels.
  • The skip value looks like it's off by 1 -- though I'm less sure of this. If a skip value of 3 means that we have Y values at 0, 3, 6 and so on, then a skip value of 1 would mean Y values at 0, 1, 2 and so on. If this is the case, a skip value of 0 is either nonsensical, or is the same as 1. It would make more sense to me if the skip shown in the diagram is actually skip of 2, in which case a Y value takes up 1 pixel, 2 pixels are skipped, and then the next pixel exists.
Pushed by bvandyk@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b37cb338e116
Touch up doc comment and diagram for PlanarYCbCrImage. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla79
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: