Bug 1643143 - Touch up doc comment and diagram for PlanarYCbCrImage. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D78144